Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49580

Regression: generated msvc solution contains no inter-project dependencies

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.0 RC
    • 5.6.0 Beta
    • Build tools: qmake
    • None
    • Windows 7 64bit, tested with MSVC2013 and MSVC2015.
    • 00abd1ddd28c5e6a18b4e9d022c1c3c8273cba96

      If one project refers to another project's build product in its LIBS variable, then the generated MSVC .sln file should include a ProjectSection(ProjectDependencies), but doesn't. This can result in the dependent project being potentially built before its dependency, which will cause a linker error.

      Attached is a minimal example which demonstrates the problem, and the solution files which are generated when I run qmake -r -tp vc with Qt 5.4.1 (good) and Qt 5.6 Beta snapshot 268 (bad). I haven't tested with Qt 5.5 but I presume if nobody complained about it before that the bug can't have been in any stable release. I also couldn't test with Qt 5.6 Alpha. Qt 5.6 Beta snapshot 198 does exhibit the same bug.

        1. test.bad.sln
          1 kB
          Mat Sutcliffe
        2. test.good.sln
          2 kB
          Mat Sutcliffe
        3. test.zip
          1 kB
          Mat Sutcliffe
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            oktalist Mat Sutcliffe
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes